# Mirai_Ariadne

./: README.md
EroEroBot/: README.md  main.py  pyproject.toml
EroEroBot/modules/: 便民功能.py  关键字回复（图片，音频）.py  关键字回复（文字）.py  大模型.py  娱乐系统.py  帮助文档.py  戳一戳.py  抽奖系统.py  撤回相关.py  涩图模块.py  禁言相关.py  计划.py
EroEroBot/语音/: config.json
